added demo for safari

--- a/demos/public/demos.html
+++ b/demos/public/demos.html
@@ -10,10 +10,11 @@
     <li><a href="johnny.html">Johnny B. Goode</a></li>
     <li><a href="2001.html">2001: A Space Odyssey</a></li>
     <li><a href="nyan.html">Nyan Cat</a></li>
+    <li><a href="nyan-safari.html">Nyan Cat (Safari Browser)</a></li>
   </ul>
 <pre>
-Note: The talking images in the demo use mp3 audio, therefore, will work only on Chrome and Firefox.
-To make it work in Safari, create your talking images with mp3 payload instead of ogg.
+Note: All demos, except the last one, will work on Chrome / Firefox.
+Use MP3 payload instead of OGG to create talking images for Safari.
 </pre>
 </body>
 </html>
