--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
 
 <p>
   <ul>
-    <li><a href="bruce.html">Bruce Lee</a></li>
-    <li><a href="johnny.html">Johnny B. Goode</a></li>
-    <li><a href="2001.html">2001: A Space Odyssey</a></li>
+    <li><a href="bruce.html">Bruce Lee (Firefox / Chrome)</a></li>
+    <li><a href="johnny.html">Johnny B. Goode (Firefox / Chrome)</a></li>
+    <li><a href="2001.html">2001: A Space Odyssey (Firefox / Chrome)</a></li>
+    <li><a href="nyan.html">Nyan Cat (Firefox / Chrome)</a></li>
+    <li><a href="nyan-safari.html">Nyan Cat (Safari)</a></li>
   </ul>
 </p>
 
