--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 
 <p>
   <ul>
-    <li><a href="bruce.html">Bruce Lee (Firefox / Chrome)</a></li>
-    <li><a href="johnny.html">Johnny B. Goode (Firefox / Chrome)</a></li>
-    <li><a href="2001.html">2001: A Space Odyssey (Firefox / Chrome)</a></li>
-    <li><a href="nyan.html">Nyan Cat (Firefox / Chrome)</a></li>
-    <li><a href="nyan-safari.html">Nyan Cat (Safari)</a></li>
+    <li><a href="bruce.html" target="_blank">Bruce Lee (Firefox / Chrome)</a></li>
+    <li><a href="johnny.html" target="_blank">Johnny B. Goode (Firefox / Chrome)</a></li>
+    <li><a href="2001.html" target="_blank">2001: A Space Odyssey (Firefox / Chrome)</a></li>
+    <li><a href="nyan.html" target="_blank">Nyan Cat (Firefox / Chrome)</a></li>
+    <li><a href="nyan-safari.html" target="_blank">Nyan Cat (Safari)</a></li>
   </ul>
 </p>
 
