--- a/nyan.html
+++ b/nyan.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <link rel="stylesheet" href="stylesheets/styles.css">
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
   <title>Talking Image Demo - Nyan Cat</title>
   <script type="text/javascript" src="talking-image.min.js"></script>
 </head>
