--- a/johnny.html
+++ b/johnny.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="talking-image.min.js"></script>
 </head>
 <body>
-  <a href="/">Home</a>
+  <a href="http://hacksparrow.github.io/talking-image/">Home</a>
   <h1>Johnny B. Goode</h1>
   <img src="johnny.gif" audio="volume=0.5 autoplay loop">
   <br>
