--- a/2001.html
+++ b/2001.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="talking-image.min.js"></script>
 </head>
   <body>
-    <a href="/">Home</a>
+    <a href="http://hacksparrow.github.io/talking-image/">Home</a>
     <h1>2001: A Space Odyssey</h1>
     <img src="2001.jpg" audio="autoplay sync">
     <br>
