--- a/bruce.html
+++ b/bruce.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="talking-image.min.js"></script>
 </head>
 <body>
-  <a href="/">Home</a>
+  <a href="http://hacksparrow.github.io/talking-image/">Home</a>
   <h1>Bruce Lee</h1>
   <img src="bruce.gif" audio="autoplay sync">
   <br>
