--- a/nyan.html
+++ b/nyan.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="talking-image.min.js"></script>
 </head>
 <body>
-  <a href="/">Home</a>
+  <a href="http://hacksparrow.github.io/talking-image/">Home</a>
   <h1>Nyan Cat</h1>
   <img src="nyan.gif" audio="loop">
   <br>
