--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Nyan Cat Demo</h3>
 
 <p>
-  <p>Click on the image to hear the audio</p>
+  <p>Click on the image to turn on audio</p>
   <img id="mp3" src="nyan-safari.gif" audio="loop volume=0.5">
   <img id="ogg" src="nyan.gif" audio="loop volume=0.5">  
 </p>
