--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   
   <script type="text/javascript" src="talking-image.min.js"></script>
     <script type="text/javascript">
-      if (navigator.userAgent.indexOf('Safari')) {
+      if (navigator.userAgent.indexOf('Safari') > 0) {
         document.getElementById('ogg').remove();
       }
       else {
