--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-  
+
+  </body>
     <script type="text/javascript">
+
+        console.log(document.getElementById('mp3'));
+        console.log(document.getElementById('ogg'));
+
 
         if (navigator.userAgent.indexOf('Safari') < 0) {
           document.getElementById('mp3').remove();
@@ -71,5 +76,4 @@
       
     </script>
     <script type="text/javascript" src="talking-image.min.js"></script>
-  </body>
 </html>
