--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Talking-image by hacksparrow</title>
+    <title>Talking-image by Hage Yaapa</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -19,7 +19,7 @@
         <h1>Talking-image</h1>
         <p>Add audio to Web images</p>
 
-        <p class="view"><a href="https://github.com/hacksparrow/talking-image">View the Project on GitHub <small>hacksparrow/talking-image</small></a></p>
+        <p class="view"><a href="https://github.com/hacksparrow/talking-image">View the Project on GitHub <br><small>hacksparrow/talking-image</small></a></p>
 
 
         <ul>
@@ -54,7 +54,7 @@
 
       </section>
       <footer>
-        This project is maintained by <a href="https://github.com/hacksparrow">hacksparrow</a><br>
+        This project is maintained by <a href="https://github.com/hacksparrow">Hage Yaapa</a><br>
         <small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
       </footer>
     </div>
@@ -74,7 +74,7 @@
       
     </script>
     <script type="text/javascript" src="talking-image.min.js"></script>
-    
+
   </body>
 
 </html>
