--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Talking-image by Hage Yaapa</title>
+    <title>Talking Image by Hage Yaapa</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,12 +16,10 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Talking-image</h1>
+        <h1>Talking Image</h1>
         <p>Add audio to Web images</p>
 
         <p class="view"><a href="https://github.com/hacksparrow/talking-image">View the Project on GitHub <br><small>hacksparrow/talking-image</small></a></p>
-
-
         <ul>
           <li><a href="https://github.com/hacksparrow/talking-image/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/hacksparrow/talking-image/tarball/master">Download <strong>TAR Ball</strong></a></li>
