--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <ul>
     <li><a href="bruce.html" target="_blank">Bruce Lee (Firefox / Chrome)</a></li>
     <li><a href="johnny.html" target="_blank">Johnny B. Goode (Firefox / Chrome)</a></li>
-    <li><a href="2001.html" target="_blank">2001: A Space Odyssey (Firefox / Chrome)</a></li>
+    <li><a href="2001.html" target="_blank">2001: A Space Odyssey (Chrome / Safari)</a></li>
     <li><a href="nyan.html" target="_blank">Nyan Cat (Firefox / Chrome)</a></li>
-    <li><a href="nyan-safari.html" target="_blank">Nyan Cat (Safari)</a></li>
+    <li><a href="nyan-safari.html" target="_blank">Nyan Cat (Chrome / Safari)</a></li>
   </ul>
 </p>
 
