--- a/demos/public/2001.html
+++ b/demos/public/2001.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Talking Image Demo - 2001: A Space Odyssey</title>
-  <script type="text/javascript" src="talking-image.min.js"></script>
+  <script type="text/javascript" src="talking-image.js"></script>
 </head>
   <body>
     <a href="/">Home</a>
