auto launch demos

--- a/demos/public/2001.html
+++ b/demos/public/2001.html
@@ -6,8 +6,8 @@
   <body>
     <a href="/">Home</a>
     <h1>2001: A Space Odyssey</h1>
-    <img src="2001.jpg" audio="autoplay sync">
+    <img src="2001.jpg" data-audio="autoplay sync">
     <br>
-    <code>&lt;img src="2001.jpg" audio="autoplay sync"></code>
+    <code>&lt;img src="2001.jpg" data-audio="autoplay sync"></code>
   </body>
 </html>
