--- a/demos/public/bruce.html
+++ b/demos/public/bruce.html
@@ -6,9 +6,9 @@
 <body>
   <a href="/">Home</a>
   <h1>Bruce Lee</h1>
-  <img src="bruce.gif" audio="autoplay sync">
+  <img src="bruce.gif" data-audio="autoplay sync">
   <br>
-  <code>&lt;img src="bruce.gif" audio="autoplay sync"></code>
+  <code>&lt;img src="bruce.gif" data-audio="autoplay sync"></code>
   <p>
     If you want the audio to be looped, specify "loop" in the audio attribute
   </p>
