--- a/demos/public/johnny.html
+++ b/demos/public/johnny.html
@@ -6,9 +6,9 @@
 <body>
   <a href="/">Home</a>
   <h1>Johnny B. Goode</h1>
-  <img src="johnny.gif" audio="volume=0.5 autoplay loop">
+  <img src="johnny.gif" data-audio="volume=0.5 autoplay loop">
   <br>
-  <code>&lt;img src="johnny.gif" audio="volume=0.5 autoplay loop"></code>
+  <code>&lt;img src="johnny.gif" data-audio="volume=0.5 autoplay loop"></code>
   <p>
     Click on the image to mute / unmute the sound
   </p>
