--- a/demos/public/nyan-safari.html
+++ b/demos/public/nyan-safari.html
@@ -6,9 +6,9 @@
 <body>
   <a href="/">Home</a>
   <h1>Nyan Cat</h1>
-  <img src="nyan-safari.gif" audio="loop">
+  <img src="nyan-safari.gif" data-audio="loop">
   <br>
-  <code>&lt;img src="nyan-safari.gif" audio="loop"></code>
+  <code>&lt;img src="nyan-safari.gif" data-audio="loop"></code>
   <p>
     Click on the image to start playing the music
   </p>
